<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:id="@+id/currency_layout">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="3dp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary2"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/circle2"
                    android:padding="10dp"
                    android:src="@drawable/img_currency"
                    android:tint="@color/white"
                    android:contentDescription="@string/currency" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/mugfuls"
                    android:textColor="@color/white"
                    android:textSize="22sp" />

            </LinearLayout>

            <ImageView
                android:id="@+id/imageView1"
                android:contentDescription="@string/triangle"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_below="@+id/linearLayout1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="-10dp"
                android:rotation="45"
                android:src="@drawable/square" />


            <Button
                android:id="@+id/currency_10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/imageView1"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="15dp"
                android:background="@color/colorPrimary2"
                android:fontFamily="sans-serif-medium"
                android:text="@string/buy_10"
                android:textColor="@color/white" />
            <Button
                android:id="@+id/currency_20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/currency_10"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="15dp"
                android:background="@color/colorPrimary2"
                android:fontFamily="sans-serif-medium"
                android:text="@string/buy_20"
                android:textColor="@color/white" />
            <Button
                android:id="@+id/currency_30"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/currency_20"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="15dp"
                android:background="@color/colorPrimary2"
                android:fontFamily="sans-serif-medium"
                android:text="@string/buy_30"
                android:textColor="@color/white" />
            <Button
                android:id="@+id/currency_40"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/currency_30"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="15dp"
                android:background="@color/colorPrimary2"
                android:fontFamily="sans-serif-medium"
                android:text="@string/buy_40"
                android:textColor="@color/white"
                android:layout_marginBottom="20dp"/>


        </RelativeLayout>


    </androidx.cardview.widget.CardView>

</RelativeLayout>
