<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/cart"
    android:background="@drawable/gradient"
    android:weightSum="100">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/order_item_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="99"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:orientation="vertical"
        android:layout_weight="1">

        <TextView
            android:id="@+id/textView_total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="5dp"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:text="@string/total_amount"
            android:textColor="#0B6623"
            android:textSize="20sp" />

        <Button
            android:layout_below="@id/textView_total"
            android:layout_marginStart="20dp"
            android:background="@drawable/cart_button"
            android:id="@+id/button_confirmOrder"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/confirm_order"
            android:layout_marginBottom="10dp"
            />
    </RelativeLayout>


</LinearLayout>